<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013 Clover Network, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources>

    <string name="app_name">Clover Android SDK Examples</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inventory_test">Inventory Test</string>
    <string name="title_activity_customer">Customer Test</string>
    <string name="order_test">Order Test</string>
    <string name="v3order_test">Order_V3 Test</string>
    <string name="title_activity_app_notification_test">App Notification Test</string>
    <string name="app_event_name">App event name</string>
    <string name="payload">Payload</string>
    <string name="send_app_notification">Send app notification</string>
    <string name="title_activity_inventory_list">Inventory List</string>
    <string name="title_activity_web_service">API Service Activity</string>
    <string name="title_activity_create_custom_tender">CreateCustomTenderTestActivity</string>
    <string name="title_activity_custom_tender_handler_test">CustomTenderHandlerTestActivity</string>
    <string name="cannot_send_auth_failed">Cannot send app notification because authentication did not succeed.</string>
    <string name="error_while_sending">An error occurred while sending the app notification: %s</string>
    <string name="title_activity_cash_event">Cash Event Test</string>
    <string name="title_activity_printer">Printer Test</string>
    <string name="title_activity_print_job_test">Print Job Test</string>
    <string name="title_activity_print_test">Print Test</string>
    <string name="title_activity_receipt_registration">Receipt Registration Test</string>
    <string name="title_activity_authenticate_employee">Authenticate Employee</string>

    <array name="connection_type">
        <item>Use app service</item>
        <item>Use HTTP</item>
    </array>
    <array name="role">
        <item>Employee</item>
        <item>Manager</item>
        <item>Admin</item>
    </array>

    <string name="title_activity_barcode_scanner">BarcodeScannerTestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="javadoc">SDK JavaDoc</string>
    <string name="github">SDK Github</string>

    <string name="title_activity_barcode_receiver">Barcode Receiver</string>
    <string name="barcode_scanned">"Barcode scanned : %s"</string>
    <string name="prompt2">in the left corner of the navigation bar to start the scanner or use the Mobile scanner.</string>
    <string name="click">Click</string>
    <string name="is_clover_receipt">Is Clover Receipt?</string>

    <string name="title_activity_check_app_subscription">Check App Subscription Example</string>
    <string name="no_account">There is no Clover account.</string>
    <string name="merchant_app_name">App Name: %s</string>
    <string name="subscriptions">Subscriptions:</string>
    <string name="metereds">Metereds:</string>
    <string name="colon_separated_strings">%1$s : %2$s</string>
    <string name="metered_string">%1$s per %2$s</string>
    <string name="no_subscription">None</string>
    <string name="package_name_intent">Launch App Store via package name</string>
    <string name="launch_app_id">Launch App Store via app id</string>
    <string name="launch_app_obj">Launch App Store via app object</string>
    <string name="target_subscription_id">Upgrade Subscription</string>

    <string name="basic_wallet">Basic Wallet Example</string>
    <string name="title_activity_pay_with_wallet">Pay with Basic Wallet</string>
    <string name="title_activity_inventory_example">Inventory Example</string>

    <string name="title_activity_customer_facing_station">Customer Facing UI Example - Station</string>
    <string name="landscape_text">This is in merchant facing mode, both Action Bar and System Bar are visible.</string>
    <string name="portrait_text">This is in customer facing mode, both Action Bar and System Bar are hidden.</string>

    <string name="title_activity_employee_permissions">Employee Permissions</string>
    <string name="welcome">Touch a button to test permissions.</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>

    <string name="title_activity_custom_tender">Custom Tender Example</string>
    <string name="notes">This app can add \'Custom Tender Example\' buttons as
        a custom tender type for your merchant account. You can implement them for:\n\n
    Secure Payment app via Intent Action: clover.intent.action.CUSTOMER_TENDER \n\n
    Sale and Register apps via Intent Action: clover.intent.action.MERCHANT_TENDER</string>
    <string name="tender_name">Custom Tender Example</string>
    <string name="title_activity_test_tender">Test Tender Activity</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="amount">Amount:</string>
    <string name="orderId">Order ID:</string>
    <string name="merchantId">Merchant ID:</string>
    <string name="tender_prompt">Here you would gather what\'s required by your payment methods
        (i.e scan a QR code, etc.) and then communicate with your server to authenticate your payment.
        For this example, these buttons work as if the payment was accepted or rejected.</string>
    <string name="request_details">Request details:</string>
    <string name="custom_tender_failure">"Custom tender initialization failure: %s"</string>
    <string name="custom_tender_not_found">Custom tender not found. Tap button to initialize it for your merchant account.</string>
    <string name="custom_tender_initialized">Custom tender is setup for your merchant account.</string>
    <string name="initialize_custom_tender">Initialize Custom Tender</string>
    <string name="get_tenders_note">Getting list of tenders available…</string>
    <string name="unable_get_tenders">Unable to get tenders for merchant account</string>
    <string name="tax_amount">Tax Amount:</string>
    <string name="taxable_amounts_object">Taxable Amounts Object:</string>
    <string name="service_charge">Service Charge Object:</string>
    <string name="employee_id">Employee ID:</string>
    <string name="tender_object">Tender Object:</string>
    <string name="order_object">Order Object:</string>
    <string name="note">Note:</string>
    <string name="currency_object">Currency Object:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="title_activity_get_owner">Get Business Owner Example</string>

    <string name="token">Token: </string>
    <string name="auth_error">Authentication Error, to get a token you need to install the app from the App Market</string>

    <string name="modify_order">Modify Order Example</string>
    <string name="modify_order_notes">This app has now added a \'Modify Order Example\' button on the pay screen in register</string>
    <string name="title_activity_add_discount">Add Discount</string>
    <string name="add_discount_instruction">Click this button to add a 10% discount to the order</string>
    <string name="add_discount">Add</string>

    <string name="modify_amount">Modify Amount Example</string>
    <string name="modify_amount_notes">This app has now added a \'Modify Amount Example\' button on the Terminal Sale Activity</string>

    <string name="pay">Pay</string>
    <string name="pay_auto_logout">Pay obeying auto logout</string>
    <string name="empty_inventory">Please add an item to the inventory before attempting to take orders.</string>

    <string name="not_logged_in">Please click the log in button</string>
    <string name="log_in">Log In</string>

    <string name="card_entry_methods_allowed">Card Entry Methods Allowed</string>
    <string name="mag_stripe">Mag Stripe</string>
    <string name="chip_card_contact">Chip Card Contact</string>
    <string name="nfc_contactless">NFC Contactless</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="payment_successful">Payment Succeeded for Order: %1$s</string>
    <string name="payment_failed">Payment Not Successful</string>

    <string name="instruction">POST to \"/v2/merchant/{mId}/apps/{appId}/notify\" with the following json to test your notification receiver: \n{\n \"notification\": {\n\u00A0\u00A0\"appEvent\": \"test_notification\",\n\u00A0\u00A0\"payload\": \"Up to 4k of data\" \n }\n}</string>
    <string name="result">Result: %s</string>

    <string name="order_id_title">Order Id:</string>
    <string name="line_item_count_title">Number of Line Items:</string>
    <string name="total_title">Total:</string>
    <string name="create_time_title">Create Time:</string>

    <string name="add_image">Add Image:</string>
    <string name="input_receipt_text">Add text to end of the receipt</string>
    <string name="test_print">Test Print</string>

    <string name="show_dialog">Show Rotate to Merchant Dialog</string>
    <string name="sample_instruction">This is a sample instruction</string>

    <string name="add_item">Add Item</string>

    <string name="payment_amount">Payment Amount</string>
    <string name="default_payment_amount">150</string>
    <string name="title_activity_employee">Employee Test</string>
    <string name="title_activity_merchant">Merchant Test</string>
    <string name="title_activity_access_token">Access Token Example</string>
    <string name="title_activity_pay_with_register">Pay with Register Example</string>
    <string name="title_activity_pay_secure_payments">Pay with Secure Payments Example</string>
    <string name="title_activity_current_order">Read Last Modified Order Example</string>
    <string name="title_activity_rotate_to_merchant">Rotate to Merchant Prompt</string>
    <string name="title_activity_select_items">Add Inventory Items Example</string>
    <string name="title_activity_terminal_payments">Terminal Plan Payment</string>
    <string name="title_activity_modify_amount">Modify Amount Example</string>
    <string name="title_activity_modify_order">Modify Order Example</string>
    <string name="title_activity_oauth">OAuth Example</string>
    <string name="title_activity_receipt_image">Image Receipt Example</string>
    <string name="title_activity_receipt_text">Text Receipt Example</string>
</resources>
