<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tender_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_details"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true">

            <TextView
                android:layout_gravity="end"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_amount"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/orderId"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_orderid"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/merchantId"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_merchantId"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/employee_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_employeeId"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/tip_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_tip"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/tax_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_tax"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/taxable_amounts_object"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_taxableAmounts"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/service_charge"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_serviceCharge"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/tender_object"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_tenderType"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/order_object"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_order"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/currency_object"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_currency"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_gravity="end"
                android:text="@string/note"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_note"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept" />

            <Button
                android:id="@+id/declineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>